[tool.poetry]
name = "fm2prof"
version = "2.3.2"
description = ""
authors = ["Koen Berends <koen.berends@deltares.nl>"]
license = "GNU LGPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pandas = "^2.2.1"
numpy = "^1.26"
netCDF4 = "^1.6.0"
scipy = "^1.11"
scikit-learn = "^1.3.0"
geojson = "^3.1"
Shapely = "^2.0"
click = "^8.1"
matplotlib = "^3.8.0"
typer = "^0.9.0"
tqdm = "^4.64.0"
notebook = "^7.1.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^8.1.1"
pyinstaller = "^6.5.0"
ipywidgets = "^8.1.2"
ipympl = "^0.9.3"
markdown-exec = {extras = ["ansi"], version = "^1.8.0"}

[tool.poetry.group.docs.dependencies]
mike = "^2.0.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.13"
mkdocs-material-extensions = "^1.3.1"
mkdocs-jupyter = "^0.24.6"
mkdocstrings-python = "^1.9.0"
mkdocs-exclude = "^1.0.2"
mkdocs-autorefs = "^1.0.1"
mkdocs-glightbox = "^0.3.7"
mkdocs-git-committers-plugin-2 = "^2.3.0"

[tool.optional-dependencies]
dev = [
	"pytest",
	"pytest-cov",
]
docs = [
	"mkdocs",
	"mkdocs-material",
    "mkdocs-material-extensions",
	"mkdocs-jupyter",
	"mkdocstrings-python",
	"mkdocs-exclude",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
