[project]
name = "fm2prof"
version = "2.4.0"
description = ""
authors = [{ name = "Koen Berends", email = "koen.berends@deltares.nl" }]
requires-python = ">=3.10, <3.13"
readme = "README.md"
license = "GPL-3.0-or-later AND LGPL-3.0-or-later"
dependencies = [
    "pandas>=2.2.1,<3",
    "numpy~=1.26",
    "netCDF4>=1.6.0,<2",
    "scipy~=1.11",
    "scikit-learn>=1.3.0,<2",
    "geojson~=3.1",
    "Shapely~=2.0",
    "click~=8.1",
    "matplotlib>=3.8.0,<4",
    "typer>=0.9.0,<0.10",
    "tqdm>=4.64.0,<5",
    "notebook>=7.1.2,<8",
    "pip>=25.1.1",
    "colorama>=0.4.6",
    "meshkernel>=8.1.2",
    "xarray>=2025.6.1",
]

[dependency-groups]
dev = [
    "pytest-cov>=4.1.0,<5",
    "pytest>=8.1.1,<9",
    "pyinstaller>=6.5.0,<7",
    "ipywidgets>=8.1.2,<9",
    "ipympl>=0.9.3,<0.10",
    "markdown-exec[ansi]>=1.8.0,<2",
    "ruff>=0.6.3,<0.7",
    "pytest-mock>=3.14.0,<4",
]
docs = [
    "mike>=2.0.0,<3",
    "mkdocs-git-revision-date-localized-plugin>=1.2.4,<2",
    "mkdocs>=1.5.3,<2",
    "mkdocs-material>=9.5.13,<10",
    "mkdocs-material-extensions>=1.3.1,<2",
    "mkdocs-jupyter>=0.24.6,<0.25",
    "mkdocstrings-python>=1.9.0,<2",
    "mkdocs-exclude>=1.0.2,<2",
    "mkdocs-autorefs>=1.0.1,<2",
    "mkdocs-glightbox>=0.3.7,<0.4",
    "mkdocs-git-committers-plugin-2>=2.3.0,<3",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff]
line-length = 120
ignore = ["DTZ005", "DTZ001"]
exclude = ["scripts"]

[tool.ruff.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104", "PT001", "ANN201", "S101", "PLR2004", "ANN001"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
fm2prof = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pixi.tasks]
